# charmed-kubeflow-solutions

./: .gitignore  README.md  tfvars.json
.github/: automatic_backport_tracks.yaml  cluster.yaml  concierge.yaml  dependencies.yaml
.github/workflows/: delete-aws-volumes.yaml  deploy-to-aks-feast.yaml  deploy-to-aks-test.yaml  deploy-to-aks.yaml  deploy-to-eks-testing.yaml  deploy-to-eks-v2.yaml  deploy-to-eks.yaml  deploy-to-k8s.yaml  deploy-to-microk8s.yaml  integrate.yaml  on_pull_request.yaml  on_pull_request_closed.yaml  on_push.yaml  spark-uat-microk8s.yaml
docs/: conf.py  index.rst
docs/how-to/: index.rst
docs/reference/: index.rst
docs/tutorial/: index.rst
kubeflow/: README.md  applications.tf  cos_configuration.tf  integrations.tf  main.tf  tox.ini
modules/kubeflow/: .tflint.hcl  README.md  applications.tf  main.tf  (+7 more)
modules/kubeflow-ambient/: README.md  applications.tf  cos_configuration.tf  integrations.tf  main.tf  offers.tf  outputs.tf  tox.ini  variables.tf
modules/kubeflow-feast/: README.md  applications.tf  integrations.tf  main.tf  tox.ini  variables.tf
modules/kubeflow-mlflow/: README.md  integrations.tf  main.tf  modules.tf  outputs.tf  tox.ini  variables.tf
modules/kubeflow-spark/: README.md  integrations.tf  main.tf  outputs.tf  tox.ini  variables.tf
scripts/: README.md  charms_promotions.py  generate-docs.sh  status.txt  tox.ini
terraform-refactoring/tests/: conftest.py  pyproject.toml  test_deployment.py  tox.ini
terraform-refactoring/tests/kubeflow-cos/: main.tf
terraform-refactoring/tests/rag/: main.tf  variables.tf
(+137 files in other folders)
