# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "charmed-kubeflow-solutions"
version = "0.1.0"
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
ruff = "^0.9.4"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.1.0"
ruff = "^0.9.4"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
aiohttp = "^3.13.5"
jubilant = "^1.8.0"
lightkube = "^0.19.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-dependency = "^0.6.1"
